fix: background alignment

--- a/public/styles/projects.css
+++ b/public/styles/projects.css
@@ -14,8 +14,9 @@
     right: 0;
     margin: 0 auto;
     width: 90%;
+    height: 100%;
     max-width: 800px;
-    max-height: 100vh;
+    max-height: 98vh;
     overflow-y: auto;
     padding: 2rem;
     border-radius: 0.5rem;
@@ -30,6 +31,7 @@
 .popup-wrapper::before {
     content: '';
     position: fixed;
+    overflow: hidden;
     top: 1vh;
     left: 0;
     right: 0;
@@ -37,7 +39,7 @@
     width: 90%;
     height: 100%;
     max-width: 800px;
-    max-height: 100vh;
+    max-height: 98vh;
     box-sizing: border-box;
     background-image: url('/images/calligraphy.jpg');
     background-size: cover;
